Fix alignment issue with really long errors in bulk smush

--- a/_src/scss/modules/_admin.scss
+++ b/_src/scss/modules/_admin.scss
@@ -142,7 +142,6 @@
 						line-height: 15px;
 						font-weight: 500;
 						margin-right: 10px;
-						white-space: nowrap
 					}
 
 					.smush-image-error {
